gccida/c2/simplify_binary_operation
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1335:33: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1335:48: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1340:4: error: expected ';' after expression
rtx v9; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1340:5: error: use of undeclared identifier 'v9'
rtx v9; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1342:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1343:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1344:4: error: expected ';' after expression
rtx v13; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1344:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // rax 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1343:14: note: 'v12' declared here
machine_mode v12; // edi 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1345:4: error: expected ';' after expression
rtx v14; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1345:5: error: use of undeclared identifier 'v14'
rtx v14; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1348:4: error: expected ';' after expression
rtx v17; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1348:5: error: use of undeclared identifier 'v17'
rtx v17; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1350:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1351:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1351:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1360:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1360:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/simplify-rtx.c:1384:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_binary_operation/src/obj/simplify-rtx.o] Error 1
